# CMakeDemo

./: CMakeDemoCPack.cmake  CMakeLists.txt  Dockerfile  README.md  conanfile.py
include/Zemon/: CMakeDemo.h
src/: CMakeDemo-cli.cpp  CMakeDemo-cli.h  CMakeDemo.cpp  CMakeLists.txt  main.cpp
test_package/: CMakeDemoTestConan.cpp  CMakeLists.txt  conanfile.py
tests/: CMakeDemo-cliTest.cpp  CMakeDemoTest.cpp  CMakeLists.txt
